# src/generated/swagger/configunstable/models/config_unstable_update_command_center_group_body.go
@@ -1,0 +1,115 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ConfigUnstableUpdateCommandCenterGroupBody config unstable update command center group body
+//
+// swagger:model ConfigUnstableUpdateCommandCenterGroupBody
+type ConfigUnstableUpdateCommandCenterGroupBody struct {
+
+	// command center group
+	CommandCenterGroup *ConfigunstableCommandCenterGroup `json:"command_center_group,omitempty"`
+
+	// If `true`, the CommandCenterGroup will be created if it does not already exist, identified by `slug`. If `false`, an error will be returned if the CommandCenterGroup does not already exist.
+	CreateIfMissing bool `json:"create_if_missing,omitempty"`
+
+	// If `true`, validates the specified configuration without creating or updating the CommandCenterGroup. If the specified configuration is valid, the endpoint returns a partial response without the CommandCenterGroup. If the specified configuration is invalid, the endpoint returns an error.
+	DryRun bool `json:"dry_run,omitempty"`
+}
+
+// Validate validates this config unstable update command center group body
+func (m *ConfigUnstableUpdateCommandCenterGroupBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCommandCenterGroup(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigUnstableUpdateCommandCenterGroupBody) validateCommandCenterGroup(formats strfmt.Registry) error {
+	if swag.IsZero(m.CommandCenterGroup) { // not required
+		return nil
+	}
+
+	if m.CommandCenterGroup != nil {
+		if err := m.CommandCenterGroup.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("command_center_group")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("command_center_group")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this config unstable update command center group body based on the context it is used
+func (m *ConfigUnstableUpdateCommandCenterGroupBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateCommandCenterGroup(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigUnstableUpdateCommandCenterGroupBody) contextValidateCommandCenterGroup(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.CommandCenterGroup != nil {
+
+		if swag.IsZero(m.CommandCenterGroup) { // not required
+			return nil
+		}
+
+		if err := m.CommandCenterGroup.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("command_center_group")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("command_center_group")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ConfigUnstableUpdateCommandCenterGroupBody) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ConfigUnstableUpdateCommandCenterGroupBody) UnmarshalBinary(b []byte) error {
+	var res ConfigUnstableUpdateCommandCenterGroupBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
