# src/generated/swagger/configunstable/models/configunstable_delete_command_center_group_response.go
@@ -1,0 +1,11 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// ConfigunstableDeleteCommandCenterGroupResponse configunstable delete command center group response
+//
+// swagger:model configunstableDeleteCommandCenterGroupResponse
+type ConfigunstableDeleteCommandCenterGroupResponse interface{}
