# src/generated/swagger/configunstable/models/configunstable_read_command_center_group_response.go
@@ -1,0 +1,109 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ConfigunstableReadCommandCenterGroupResponse configunstable read command center group response
+//
+// swagger:model configunstableReadCommandCenterGroupResponse
+type ConfigunstableReadCommandCenterGroupResponse struct {
+
+	// command center group
+	CommandCenterGroup *ConfigunstableCommandCenterGroup `json:"command_center_group,omitempty"`
+}
+
+// Validate validates this configunstable read command center group response
+func (m *ConfigunstableReadCommandCenterGroupResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCommandCenterGroup(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigunstableReadCommandCenterGroupResponse) validateCommandCenterGroup(formats strfmt.Registry) error {
+	if swag.IsZero(m.CommandCenterGroup) { // not required
+		return nil
+	}
+
+	if m.CommandCenterGroup != nil {
+		if err := m.CommandCenterGroup.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("command_center_group")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("command_center_group")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this configunstable read command center group response based on the context it is used
+func (m *ConfigunstableReadCommandCenterGroupResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateCommandCenterGroup(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigunstableReadCommandCenterGroupResponse) contextValidateCommandCenterGroup(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.CommandCenterGroup != nil {
+
+		if swag.IsZero(m.CommandCenterGroup) { // not required
+			return nil
+		}
+
+		if err := m.CommandCenterGroup.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("command_center_group")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("command_center_group")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ConfigunstableReadCommandCenterGroupResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ConfigunstableReadCommandCenterGroupResponse) UnmarshalBinary(b []byte) error {
+	var res ConfigunstableReadCommandCenterGroupResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
